self_hosted/k8s/planning-poker/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-poker-backend
  labels:
    app: planning-poker-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planning-poker-backend
  template:
    metadata:
      labels:
        app: planning-poker-backend
    spec:
      containers:
      - name: planning-poker-backend
        image:  bruno303/planning-poker-backend:0.0.6
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
