self_hosted/k8s/planning-poker/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planning-poker-backend-svc
spec:
  type: ClusterIP
  selector:
    app: planning-poker-backend
  ports:
    - port: 8080
      targetPort: 8080
